--- a/Front/frontend/src/main.css
+++ b/Front/frontend/src/main.css
@@ -10,6 +10,12 @@ main ul{
     list-style:none;
 }
 
+@media (max-width:600px){
+    main ul{
+        grid-template-columns: 1fr;
+    }
+}
+
 li.notepad-infos div{
     display: flex;
     justify-content: space-between;
